--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body.theme-init #wallpaper { background-color: var(--forge-orange); background-i
 body.theme-code #wallpaper {
   background-color: #0A0A0A;
   background-image: linear-gradient(to right, rgba(255,255,255,0.042) 1px, transparent 1px), linear-gradient(to bottom, rgba(255,255,255,0.042) 1px, transparent 1px);
-  background-size: 33px 33px; filter: none; transform: none;
+  background-size: 33px 33px; background-repeat: repeat; filter: none; transform: none;
 }
 body.theme-pixel #wallpaper { background-color: #000; background-image: url("assets/pixel-bg.jpg"); transform: scale(1.15); filter: none; }
 
